--- a/tribute.html
+++ b/tribute.html
@@ -17,7 +17,7 @@
 <body id="main">
  <header id="title" id="top">
  	<span>Journey of Ms Dhoni,Nothing to Everything</span>
- 	<p>The Greate Finisher, Captain cool</p>
+ 	<p>The Great Finisher, Captain cool</p>
  	<img src="img/arrow.svg" alt="down-arrow">
  </header>
  <main class="wrapper">
